# LRUCacheSim

./: .gitignore  CMakeLists.txt  Makefile  README.md  p
src/: cachesim.c  functions.c  header.h
